fixed the bubbles and made mobile view and center aligned things

--- a/src/styles/views/landing.scss
+++ b/src/styles/views/landing.scss
@@ -50,6 +50,8 @@
   font-size: 2.5em;
   display: block;
   font-weight: bold;
+  padding: 25px 0;
+
 }
 
 .section-tagline{
@@ -100,73 +102,39 @@
 }
 
 .speech-bubble {
-  font-weight: bold;
   position: relative;
-  padding: 5px;
-  margin: 1em 0 3em;
-  border: 2px solid #fff;
-  text-align: center;
-  color: #fff;
+  display: inline-block;
+  color: white;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 15px;
+  border: solid white;
   background: $cn-color-blue;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
+  margin: 10px 0;
 }
-
 .speech-bubble:before {
-  content: "";
+  content:"";
   position: absolute;
-  z-index: 10;
-  bottom: -25px;
-  left: 35px;
-  width: 25px;
-  height: 25px;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  border-color: #fff;
-  background: transparent;
-  -webkit-border-bottom-right-radius: 80px 50px;
-  -moz-border-radius-bottomright: 80px 50px;
-  border-bottom-right-radius: 100%;
-  display: block;
-  transform: scaleX(-1);
+  right: 100%;
+  bottom: -26px;
+  left: 13px;
+  width: 0;
+  height: 0;
+  transform: rotate(-90deg);
+  border-top: 26px solid transparent;
+  border-right: 26px solid white;
+  border-bottom: 0px solid transparent;
 }
-
-.speech-bubble:after {
-  content: "";
+.triangle-inner:before {
+  content:"";
   position: absolute;
-  z-index: 10;
-  bottom: -25px;
-  left: 40px;
-  width: 20px;
-  height: 25px;
-  border-style: solid;
-  border-width: 0 2px 0px 0;
-  border-color: #fff;
-  background: transparent;
-/*     -webkit-border-bottom-right-radius: 40px 50px;
-  -moz-border-radius-bottomright: 40px 50px;
-  border-bottom-left-radius: 40px 50px; */
-  display: block;
-  
-}
-
-.speech-bubble > :first-child:after {
-  content: "";
-  position: absolute;
-  bottom: -10px;
-  left: 36px;
-  width: 24px;
-  height: 15px;
-  background: $cn-color-blue;
-}
-
-.invert > :first-child:after {
-  content: "";
-  position: absolute;
-  top: -25px;
-  left: 31px;
-  width: 24px;
-  height: 15px;
-  background: $cn-color-blue;
+  right: 100%;
+  bottom: -20px;
+  left: 17px;
+  width: 0;
+  height: 0;
+  transform: rotate(-90deg);
+  border-top: 20px solid transparent;
+  border-right: 20px solid $cn-color-blue;
+  border-bottom: 0px solid transparent;
 }
